# tgscheduler

./: .gitignore  README.md  bootstrap.py  kickstart.sh  logging_config.py  main.py  models.py  pyproject.toml  receiver.py  requirements.txt  sender.py  start_tg_receiver.sh
